substantial progress on routes within api
